variables.Variables.scala.code
var buggles = 0
while (buggles!=7){
  buggles=buggles+1
  var pas=0
	while (estSurBiscuit()==false){
  	avance()
    pas=pas+1
	}
	porteBiscuit()
  while (pas!=0){
    recule()
    pas=pas-1
  }
